# platformio_rules

./: .bazelrc  .gitignore  .travis.yml  BUILD  MODULE.bazel  README.md  WORKSPACE  requirements_lock.txt
bazel/: bazel_0.23.1-linux-x86_64.deb.sha256  bazel_0.27.2-linux-x86_64.deb.sha256  bazel_0.4.5-linux-x86_64.deb.sha256  bazel_4.0.0-linux-x86_64.deb.sha256  deps.bzl  pip_install.bzl  pip_parse.bzl  transitive.bzl
docs/: BUILD  platformio_doc.md
docs/platformio/: platformio.md
platformio/: BUILD  deps.bzl  platformio.bzl  platformio.ini.tmpl  template_renderer.py
tests/arduino/: BUILD  arduino_impl.cc  arduino_impl.h  arduino_interface.h  arduino_interface_mock.h
tests/binary_counter/: BUILD  README.md  binary_counter.cc
tests/binary_counter/button_presses/: BUILD  button_presses.cc  button_presses.h  button_presses_test.cc
tests/binary_counter/convert/: BUILD  convert.cc  convert.h  convert_test.cc
tests/binary_counter/doc/: binary_counter_mega.fzz  binary_counter_nano.fzz
tests/binary_counter/led_display/: BUILD  led_display.cc  led_display.h  led_display_test.cc
tests/binary_counter_espressif8266/: BUILD  README.md  binary_counter.cc
tests/blink/: BUILD  README.md  blink.cc
tests/blink/doc/: blink_attiny.fzz
tests/esp32_fs/: BUILD  fs.cc
tests/esp32_fs/fs_data/: file_1.txt
tests/rgb_blink/: BUILD  rgb_blink.cc  rgb_led.cc  rgb_led.h
