module(name = "platformio_rules")

bazel_dep(name = "rules_python", version = "1.3.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "stardoc", version = "0.8.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "py_deps",
    python_version = "3.12",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "py_deps")

########################### Load Archives ###########################
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Google testing and mocking framework for C++.
http_archive(
    name = "com_google_googletest",
    sha256 = "24564e3b712d3eb30ac9a85d92f7d720f60cc0173730ac166f27dda7fed76cb2",
    strip_prefix = "googletest-release-1.12.1",
    urls = ["https://github.com/google/googletest/archive/release-1.12.1.zip"],
)

# Stardoc, documentation generator for custom Bazel rules.
http_archive(
    name = "io_bazel_rules_sass",
    sha256 = "05db38271919d3d209a9f58db412a5bf2af2def7d4c1fae17b401dccbad97178",
    strip_prefix = "rules_sass-1.57.0",
    url = "https://github.com/bazelbuild/rules_sass/archive/1.57.0.zip",
)

http_archive(
    name = "io_bazel_skylib",
    sha256 = "4756ab3ec46d94d99e5ed685d2d24aece484015e45af303eb3a11cab3cdc2e71",
    urls = ["https://github.com/bazelbuild/bazel-skylib/archive/1.3.0.zip"],
)

########################### Load necessary dependencies ###########################
p = use_extension("//bazel:deps.bzl", "platformio_rules_dependencies")

pt = use_extension("//bazel:transitive.bzl", "platformio_rules_transitive_dependencies")

ptt = use_extension("//bazel:pip_parse.bzl", "platformio_rules_pip_parse_dependencies")

pttt = use_extension("//bazel:pip_install.bzl", "platformio_rules_pip_install_dependencies")
